# checkbox

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  category.txt  ce-oem-full.txt  codecov.yml  list_manifest_entry.txt  list_test_plan_ce_oem.txt  mywork.patch  renovate.json  test_nvme_patterns.py  test_sriov.py
checkbox-ng/: .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .pmr-merge-hook  .travis.yml  AGENTS.md  HACKING.md  MANIFEST.in  Makefile  README.md  README.rst  Vagrantfile  __init__.py  abc.py  mk-interesting-graphs.sh  mk-venv  mk-venv.sh  pex-requirements.txt  public.py  pyproject.toml  setup.cfg  setup.py  test-in-vagrant.sh  test-with-coverage.sh  test_abc.py  test_public.py  tests.py  tox.ini
checkbox-ng/checkbox_ng/: __init__.py  app_context.py  certification.py  config.py  launcher.py  launchpad.py  main.py  misc.py  resume_menu.py  service.py  test_app_context.py  test_certification.py  test_config.py  test_launcher.py  test_main.py  test_misc.py  test_urwid_ui.py  test_user_utils.py  test_utils.py  tests.py  tools.py  ui.py  urwid_ui.py  user_utils.py  utils.py  version.py
checkbox-ng/checkbox_ng/commands/: __init__.py  certification.py  cli.py  launcher.py  newcli.py  oldcli.py  selftest.py  server.py  service.py  sru.py  submit.py  test_cli.py  test_sru.py
checkbox-ng/checkbox_ng/dbus_ex/: __init__.py  decorators.py  service.py  test_dbus.py
checkbox-ng/checkbox_ng/launcher/: __init__.py  agent.py  check_config.py  checkbox_cli.py  config.py  controller.py  master.py  merge_reports.py  merge_submissions.py  provider_tools.py  remote.py  run.py  slave.py  stages.py  startprovider.py  subcommands.py  test_agent.py  test_check_config.py  test_checkbox_cli.py  test_config.py  test_controller.py  test_inv_run.py  test_master.py  test_merge_reports.py  test_merge_submissions.py  test_provider_tools.py  test_slave.py  test_stages.py  test_subcommands.py  test_translator.py  translator.py
checkbox-ng/contrib/: canonical-certification-server.conf  checkbox-ci-installed-notifier.conf  checkbox-ci-installed-notifier.service  checkbox-ci-mailer.conf  checkbox-ci-mailer.service  checkbox-ci-script.sh  checkbox-sru-desktop.sh  checkbox-sru.conf  checkbox-sru.desktop  checkbox-sru.service  com.canonical.certification.PlainBox.service  com.canonical.certification.PlainBox1.service  dbus-mini-client.py  pxu.vim
checkbox-ng/daily-package-testing/: README  Vagrantfile  test-in-vagrant.sh
checkbox-ng/debian/: .git-dpm  changelog  checkbox-cli.1  checkbox-ng-service.install  checkbox-ng.bash-completion  checkbox-ng.install  checkbox-ng.lintian-overrides  checkbox-ng.manpages  checkbox-ng.remote-slave.service  checkbox-ng.service  com.canonical.certification.checkbox.pkla  control  copyright  plainbox-insecure-policy.install  plainbox-secure-policy.install  python3-checkbox-ng-doc.doc-base  python3-checkbox-ng.links  python3-checkbox-ng.preinst  rules  upstream-signing-key.pgp  watch
checkbox-ng/docs/: Makefile  bugs.rst  changelog.rst  conf.py  configs.rst  contributing.rst  custom-app.rst  glossary.rst  index.rst  install.rst  intro.rst  launcher-tutorial.rst  legacy-launcher-tutorial.rst  nested-test-plan.rst  profiles.rst  qml-job-tutorial.rst  release.rst  remote.rst  side-loading.rst  slave-daemon.rst  snappy.rst  stack.rst  testing-snappy.rst  tutorials.rst  understanding.rst  usage.rst  using.rst
checkbox-ng/impl/: __init__.py  box.py  checkbox.py  depmgr.py  job.py  main.py  resource.py  result.py  rfc822.py  runner.py  session.py  test_box.py  test_depmgr.py  test_job.py  test_main.py  test_resource.py  test_rfc822.py  test_session.py  test_testdef.py  testdef.py  testing_utils.py  utils.py
checkbox-ng/launchers/: checkbox-cli  checkbox-cli2  checkbox-launcher
checkbox-ng/plainbox/: __init__.py  __main__.py  _lazymod.py  abc.py  configuration.py  i18n.py  provider_manager.py  public.py  suspend_consts.py  test_abc.py  test_i18n.py  test_init.py  test_provider_manager.py  test_public.py  tests.py
checkbox-ng/po/: POTFILES.in  POTFILES.skip  checkbox-ng.pot  de.po  en_AU.po  en_CA.po  en_GB.po  es.po  fr.po  ja.po  pl.po  plainbox.pot  pt.po  ru.po  tr.po  uk.po  zh_TW.po
checkbox-ng/requirements/: 001-container-tests-plainbox-egg-info  container-tests-checkbox-documentation  container-tests-checkbox-ng-unit  container-tests-plainbox  container-tests-plainbox-documentation  container-tests-plainbox-integration  container-tests-providers-internal  deb-core.txt  deb-dbus.txt  deb-i18n.txt  pip-core.txt  pip-dbus.txt  pip-docs.txt  pip-optional.txt  pip-tests.txt  remove-deb-core.txt  rpm-core.txt  rtfd.txt
checkbox-support/: .bumpversion.cfg  .coveragerc  AGENTS.md  COPYING  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
checkbox-support/checkbox_support/: bt_helper.py  camera_pipelines.py  disk_support.py  interactive_cmd.py  log_watcher.py  lxd_support.py  manifest.py  monitor_config.py  udev.py  universal_screenshot.py
checkbox-support/debian/: .git-dpm  changelog  control  copyright  rules  watch
checkbox-support/requirements/: container-tests-checkbox-support  deb-core.txt  pip-core.txt  remove-deb-core.txt
metabox/: .gitignore  AGENTS.md  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  setup.py  tox.ini
metabox/configs/: checkbox-core-snap-classic-beta-config.py  controller-source-16.04.py  controller-source-18.04.py  controller-source-20.04.py  controller-source-22.04.py  dev-ppa-config.py  local-source-16.04.py  local-source-18.04.py  local-source-20.04.py  local-source-22.04.py  local-source-24.04.py  ppa-beta-config.py  ppa-edge-config.py  remote-source-16.04.py  remote-source-18.04.py  remote-source-20.04.py  remote-source-22.04.py  remote-source-24.04.py  source-controller-config.py  source-local-config.py  source-remote-config.py  testing-ppa-config.py
metabox/metabox/: main.py
unit_json_schema/validate/: README.md  main.py  pyproject.toml
(+3780 files in other folders)
