[build-system]
  requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
  build-backend = "setuptools.build_meta"
[project]
  name = "checkbox-ng"
  #url="https://launchpad.net/checkbox-ng/"
  authors = [
      {name = 'Sylvain Pineau', email = 'sylvain.pineau@canonical.com'}
  ]
  # duplicated from setup.cfg because it is needed with the empty `setup.py`
  #  hack till snapcraft is updated
  dependencies = [
    'packaging',
    'psutil',
    'requests >= 1.0',
    'urwid >= 1.1.1',
    'Jinja2 >= 2.7',
    'xlsxwriter',
    'tqdm',
    'importlib_metadata; python_version < "3.8"'
  ]
  #test_suite='checkbox_ng.tests.test_suite'
  license={"text" = "GPLv3"}
  #platforms=["POSIX"]
  description="Checkbox - Command Line Test Runner"
  classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Console :: Curses',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Manufacturing',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Natural Language :: Polish',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.4',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Quality Assurance',
    'Topic :: Software Development :: Testing',
    'Topic :: System :: Benchmark',
    'Topic :: Utilities',
  ]
  dynamic = ["version"]
[tool.black]
  line-length = 79
  # Exclude vendorized code (e.g. the stuff in plainbox/vendor/)
  extend-exclude = "/vendor/"
[tool.setuptools_scm]
  root=".."
[tool.setuptools.packages.find]
  exclude = ["debian*"]
[project.scripts]
  checkbox-cli = "checkbox_ng.launcher.checkbox_cli:main"
  checkbox-provider-tools = "checkbox_ng.launcher.provider_tools:main"
[project.entry-points."plainbox.exporter"]
  text = "plainbox.impl.exporter.text:TextSessionStateExporter"
  tar = "plainbox.impl.exporter.tar:TARSessionStateExporter"
  xlsx = "plainbox.impl.exporter.xlsx:XLSXSessionStateExporter"
  jinja2 = "plainbox.impl.exporter.jinja2:Jinja2SessionStateExporter"
[project.entry-points."plainbox.buildsystem"]
  make = "plainbox.impl.buildsystems:MakefileBuildSystem"
  go = "plainbox.impl.buildsystems:GoBuildSystem"
  autotools = "plainbox.impl.buildsystems:AutotoolsBuildSystem"
[project.entry-points."plainbox.unit"]
  unit = "plainbox.impl.unit.unit:Unit"
  job = "plainbox.impl.unit.job:JobDefinition"
  template = "plainbox.impl.unit.template:TemplateUnit"
  category = "plainbox.impl.unit.category:CategoryUnit"
  'test plan' = "plainbox.impl.unit.testplan:TestPlanUnit"
  'manifest entry' = "plainbox.impl.unit.manifest:ManifestEntryUnit"
  'packaging meta-data' = "plainbox.impl.unit.packaging_metadata:PackagingMetaDataUnit"
  exporter = "plainbox.impl.unit.exporter:ExporterUnit"
[project.entry-points."plainbox.parsers"]
  pxu = "plainbox.impl.secure.rfc822:load_rfc822_records"
  regex = "plainbox.impl.xparsers:Re.parse"
  pxu-override = "plainbox.impl.xparsers:FieldOverride.parse"
[project.entry-points."plainbox.transport"]
  file = "plainbox.impl.transport:FileTransport"
  stream = "plainbox.impl.transport:StreamTransport"
  submission-service = "checkbox_ng.certification:SubmissionServiceTransport"
[metadata]
  long_description={'file' = 'README.md'}
  long_description_content_type='text/x-rst'
