[upload]
sign=true
[options]
packages=find_namespace:
include_package_data=true
install_requires=
  packaging
  importlib_metadata; python_version < "3.8"
  # Pinned to xenial universe
  requests == 2.9.1; python_version == "3.5"
  urwid == 1.3.1; python_version == "3.5"
  Jinja2 == 2.8; python_version == "3.5"
  MarkupSafe == 0.23; python_version == "3.5"
  XlsxWriter == 0.7.3; python_version == "3.5"
  tqdm == 4.19.5; python_version == "3.5"
  psutil == 5.5.1; python_version == "3.5"
  PyYAML == 3.11; python_version == "3.5"
  # Pinned to bionic universe
  requests == 2.18.4; python_version <= "3.6" and python_version > "3.5"
  urwid == 2.0.1; python_version <= "3.6" and python_version > "3.5"
  Jinja2 == 2.10; python_version <= "3.6" and python_version > "3.5"
  MarkupSafe == 1.1.0; python_version <= "3.6" and python_version > "3.5"
  XlsxWriter == 0.9.6; python_version <= "3.6" and python_version > "3.5"
  tqdm == 4.19.5; python_version <= "3.6" and python_version > "3.5"
  psutil == 5.5.1; python_version <= "3.6" and python_version > "3.5"
  PyYAML == 3.12; python_version <= "3.6" and python_version > "3.5"
  # Pinned to focal universe
  requests == 2.22.0; python_version <= "3.8" and python_version > "3.6"
  urwid == 2.0.1; python_version <= "3.8" and python_version > "3.6"
  Jinja2 == 2.10.1; python_version <= "3.8" and python_version > "3.6"
  MarkupSafe == 1.1.0; python_version <= "3.8" and python_version > "3.6"
  XlsxWriter == 1.1.2; python_version <= "3.8" and python_version > "3.6"
  tqdm == 4.30.0; python_version <= "3.8" and python_version > "3.6"
  psutil == 5.5.1; python_version <= "3.8" and python_version > "3.6"
  PyYAML == 5.3.1; python_version <= "3.8" and python_version > "3.6"
  # Pinned to jammy universe
  requests == 2.25.1; python_version <= "3.10" and python_version > "3.8"
  urwid == 2.1.2; python_version <= "3.10" and python_version > "3.8"
  Jinja2 == 3.0.3; python_version <= "3.10" and python_version > "3.8"
  MarkupSafe == 2.0.1; python_version <= "3.10" and python_version > "3.8"
  XlsxWriter == 3.0.2; python_version <= "3.10" and python_version > "3.8"
  tqdm == 4.57.0; python_version <= "3.10" and python_version > "3.8"
  psutil == 5.9.0; python_version <= "3.10" and python_version > "3.8"
  PyYAML == 6.0.1; python_version <= "3.10" and python_version > "3.8"
  # Pinned to noble universe
  requests == 2.31.0; python_version <= "3.12" and python_version > "3.10"
  urwid == 2.6.10; python_version <= "3.12" and python_version > "3.10"
  Jinja2 == 3.1.2; python_version <= "3.12" and python_version > "3.10"
  MarkupSafe == 2.1.5; python_version <= "3.12" and python_version > "3.10"
  XlsxWriter == 3.1.9; python_version <= "3.12" and python_version > "3.10"
  tqdm == 4.66.2; python_version <= "3.12" and python_version > "3.10"
  psutil == 5.9.8; python_version <= "3.12" and python_version > "3.10"
  PyYAML == 6.0.1; python_version <= "3.12" and python_version > "3.10"
  # Unbound for newer versions of python
  requests; python_version > "3.12"
  urwid; python_version > "3.12"
  Jinja2; python_version > "3.12"
  MarkupSafe; python_version > "3.12"
  XlsxWriter; python_version > "3.12"
  tqdm; python_version > "3.12"
  psutil; python_version > "3.12"
  PyYAML; python_version > "3.12"
  filetype; python_version > "3.12"
[upload_docs]
upload_dir=build/sphinx/html
[metadata]
name=checkbox-ng
[options.entry_points]
console_scripts=
  checkbox-cli=checkbox_ng.launcher.checkbox_cli:main
  checkbox-provider-tools=checkbox_ng.launcher.provider_tools:main
plainbox.exporter=
  text=plainbox.impl.exporter.text:TextSessionStateExporter
  tar=plainbox.impl.exporter.tar:TARSessionStateExporter
  xlsx=plainbox.impl.exporter.xlsx:XLSXSessionStateExporter
  jinja2=plainbox.impl.exporter.jinja2:Jinja2SessionStateExporter
plainbox.buildsystem=
  make=plainbox.impl.buildsystems:MakefileBuildSystem
  go=plainbox.impl.buildsystems:GoBuildSystem
  autotools=plainbox.impl.buildsystems:AutotoolsBuildSystem
plainbox.unit=
  unit=plainbox.impl.unit.unit:Unit
  job=plainbox.impl.unit.job:JobDefinition
  template=plainbox.impl.unit.template:TemplateUnit
  category=plainbox.impl.unit.category:CategoryUnit
  test plan=plainbox.impl.unit.testplan:TestPlanUnit
  manifest entry=plainbox.impl.unit.manifest:ManifestEntryUnit
  packaging meta-data=plainbox.impl.unit.packaging_metadata:PackagingMetaDataUnit
  exporter=plainbox.impl.unit.exporter:ExporterUnit
plainbox.parsers=
  pxu=plainbox.impl.secure.rfc822:load_rfc822_records
  regex=plainbox.impl.xparsers:Re.parse
  pxu-override=plainbox.impl.xparsers:FieldOverride.parse
plainbox.transport=
  file=plainbox.impl.transport:FileTransport
  stream=plainbox.impl.transport:StreamTransport
  submission-service=checkbox_ng.certification:SubmissionServiceTransport
