[upload]
sign = True
[options]
packages=find_namespace:
include_package_data=true
install_requires=
  importlib_metadata; python_version<"3.8"
  importlib-resources; python_version<"3.8"
  # Pinned to xenial universe
  requests <= 2.9.1; python_version == "3.5"
  opencv_python <= 4.4.0.40; python_version == "3.5"
  pyparsing <= 2.0.3; python_version == "3.5"
  distro <= 1.0.1; python_version == "3.5"
  PyYAML <= 3.11; python_version == "3.5"
  requests-unixsocket <= 0.3.0; python_version == "3.5"
  numpy <= 1.17.4; python_version == "3.5"
  natsort <= 7.1.1; python_version == "3.5"
  libsvm <= 3.23.0.4; python_version == "3.5"
  # Pinned to bionic universe
  requests <= 2.18.4; python_version > "3.5" and python_version <= "3.6"
  opencv_python <= 4.4.0.46; python_version > "3.5" and python_version <= "3.6"
  pyparsing <= 2.2.0; python_version > "3.5" and python_version <= "3.6"
  distro <= 1.0.1; python_version > "3.5" and python_version <= "3.6"
  PyYAML <= 3.12; python_version > "3.5" and python_version <= "3.6"
  requests-unixsocket <= 0.1.5; python_version > "3.5" and python_version <= "3.6"
  numpy <= 1.17.4; python_version > "3.5" and python_version <= "3.6"
  natsort <= 8.0.2; python_version > "3.5" and python_version <= "3.6"
  libsvm <= 3.23.0.4; python_version > "3.5" and python_version <= "3.6"
  # Pinned to focal universe
  requests <= 2.22.0; python_version > "3.6" and python_version <= "3.8"
  opencv_python <= 4.4.0.46; python_version > "3.6" and python_version <= "3.8"
  pyparsing <= 2.4.6; python_version > "3.6" and python_version <= "3.8"
  distro <= 1.4.0; python_version > "3.6" and python_version <= "3.8"
  PyYAML <= 5.3.1; python_version > "3.6" and python_version <= "3.8"
  requests-unixsocket <= 0.2.0; python_version > "3.6" and python_version <= "3.8"
  numpy <= 1.17.4; python_version > "3.6" and python_version <= "3.8"
  natsort <= 8.0.2; python_version > "3.6" and python_version <= "3.8"
  libsvm <= 3.23.0.4; python_version > "3.6" and python_version <= "3.8"
  # Pinned to jammy universe
  requests <= 2.25.1; python_version > "3.8" and python_version <= "3.10"
  opencv_python <= 4.5.4.60; python_version > "3.8" and python_version <= "3.10"
  pyparsing <= 2.4.7; python_version > "3.8" and python_version <= "3.10"
  distro <= 1.7.0; python_version > "3.8" and python_version <= "3.10"
  PyYAML <= 6.0.1; python_version > "3.8" and python_version <= "3.10"
  requests-unixsocket <= 0.2.0; python_version > "3.8" and python_version <= "3.10"
  numpy <= 1.21.5; python_version > "3.8" and python_version <= "3.10"
  natsort <= 8.0.2; python_version > "3.8" and python_version <= "3.10"
  libsvm <= 3.23.0.4; python_version > "3.8" and python_version <= "3.10"
  # Pinned to noble universe
  requests <= 2.31.0; python_version > "3.10" and python_version <= "3.12"
  opencv_python <= 4.6.0.66; python_version > "3.10" and python_version <= "3.12"
  pyparsing <= 3.1.1; python_version > "3.10" and python_version <= "3.12"
  distro <= 1.9.0; python_version > "3.10" and python_version <= "3.12"
  PyYAML <= 6.0.1; python_version > "3.10" and python_version <= "3.12"
  requests-unixsocket <= 0.4.0; python_version > "3.10" and python_version <= "3.12"
  numpy <= 1.26.4; python_version > "3.10" and python_version <= "3.12"
  natsort <= 8.0.2; python_version > "3.10" and python_version <= "3.12"
  libsvm <= 3.23.0.4; python_version > "3.10" and python_version <= "3.12"
  # any other version is unbounded
  requests; python_version > "3.12"
  opencv_python; python_version > "3.12"
  pyparsing; python_version > "3.12"
  distro; python_version > "3.12"
  PyYAML; python_version > "3.12"
  requests-unixsocket; python_version > "3.12"
  numpy; python_version > "3.12"
  natsort; python_version > "3.12"
  libsvm; python_version > "3.12"
[metadata]
name=checkbox-support
[options.entry_points]
plainbox.parsers=
  pactl-list=checkbox_support.parsers.pactl:parse_pactl_output
  udevadm=checkbox_support.parsers.udevadm:parse_udevadm_output
  modprobe=checkbox_support.parsers.modprobe:parse_modprobe_d_output
  pci-subsys-id=checkbox_support.parsers.pci_config:parse_pci_subsys_id
  dkms-info=checkbox_support.parsers.dkms_info:parse_dkms_info
  dmidecode=checkbox_support.parsers.dmidecode:parse_dmidecode_output
  modinfo=checkbox_support.parsers.modinfo:parse_modinfo_attachment_output
  buildstamp=checkbox_support.parsers.image_info:parse_buildstamp_attachment_output
  recovery-info=checkbox_support.parsers.image_info:parse_recovery_info_attachment_output
  bto=checkbox_support.parsers.image_info:parse_bto_attachment_output
  kernelcmdline=checkbox_support.parsers.kernel_cmdline:parse_kernel_cmdline
console_scripts=
  checkbox-support-run_watcher=checkbox_support.scripts.run_watcher:main
  checkbox-support-fwts_test=checkbox_support.scripts.fwts_test:main
  checkbox-support-usb_read_write=checkbox_support.scripts.usb_read_write:run_read_write_test
  checkbox-support-nmea_test=checkbox_support.scripts.nmea_test:main
  checkbox-support-snap_connect=checkbox_support.scripts.snap_connect:main
  checkbox-support-eddystone_scanner=checkbox_support.scripts.eddystone_scanner:main
  checkbox-support-lsusb=checkbox_support.scripts.lsusb:main
  checkbox-support-parse=checkbox_support.parsers:main
  checkbox-support-pipewire-utils=checkbox_support.scripts.pipewire_utils:main
