[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "validate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema==4.26.0",
    "pyyaml==6.0.3",
]

[project.scripts]
validate = "main:main"

[tool.setuptools]
py-modules = ["main"]
